--- a/css/style.css
+++ b/css/style.css
@@ -299,50 +299,70 @@ a {
   color: #000000;
 }
 
+.category {
+  position: relative;
+  display: block;
+  padding-top: 170px;
+}
+
 .category::before {
   content: "";
-  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+
   width: 160px;
   height: 160px;
 
   background-color: rgba(240, 197, 46, 0.5);
-  background-position: center;
+}
+
+.category::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 160px;
+  height: 160px;
+
   background-repeat: no-repeat;
+  background-position: center;
 }
 
-.category-virtual::before {
-  background-image: url("../img/category-virtual.png");
-}
-
-.category-monopod::before {
-  background-image: url("../img/category-monopod.png");
-  background-position: bottom;
-}
-
-.category-actioncam::before {
-  background-image: url("../img/category-actioncam.png");
-}
-
-.category-bracelet::before {
-  background-image: url("../img/category-bracelet.png");
-}
-
-.category-watch::before {
-  background-image: url("../img/category-watch.png");
-}
-
-.category-copters::before {
-  background-image: url("../img/category-copters.png");
+.category:active::after {
+  opacity: 0.3;
 }
 
 .category:hover::before,
-.category:focus::before, 
+.category:focus::before,
 .category:active::before {
   background-color: rgba(240, 197, 46, 1);
 }
 
-.category-virtual:active::before {
-  opacity: 0.3;
+.category-virtual::after {
+  background-image: url("../img/category-virtual.png");
+}
+
+.category-monopod::after {
+  background-image: url("../img/category-monopod.png");
+  background-position: bottom;
+}
+
+.category-actioncam::after {
+  background-image: url("../img/category-actioncam.png");
+}
+
+.category-bracelet::after {
+  background-image: url("../img/category-bracelet.png");
+}
+
+.category-watch::after {
+  background-image: url("../img/category-watch.png");
+}
+
+.category-copters::after {
+  background-image: url("../img/category-copters.png");
 }
 
 .partners-item {
@@ -353,7 +373,24 @@ a {
   color: #000000;
 }
 
+.header-with-bar {
+  position: relative;
+
+  padding-top: 40px;
+}
+
 .header-with-bar::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+
+  width: 80px;
+  height: 7px;
+  background-color: #000000
+}
+
+/* .header-with-bar::before {
   content: "";
   width: 300px;
   height: 60px;
@@ -362,7 +399,7 @@ a {
   background-repeat: no-repeat;
   background-position: left;
   display: block;
-}
+} */
 
 .adress::after {
   content: "";
