--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,11 @@ a {
   color: #ffffff;
 }
 
-.categories-item a {
+.category {
+  position: relative;
+  display: block;
+  padding-top: 170px;
+
   font-family: "Gilroy", "Arial", sans-serif;
   font-weight: 800;
 
@@ -297,12 +301,6 @@ a {
   font-size: 18px;
   letter-spacing: 4px;
   color: #000000;
-}
-
-.category {
-  position: relative;
-  display: block;
-  padding-top: 170px;
 }
 
 .category::before {
@@ -507,7 +505,8 @@ a {
   outline: none;
 }
 
-.modal-feedback .button, .filters .button {
+.modal-feedback .button,
+.filters .button {
   width: 260px;
 
   padding-top: 5px;
@@ -532,9 +531,7 @@ a {
 }
 
 .button:hover,
-.button:focus,
-button:hover,
-button:focus {
+.button:focus {
   background-color: #f0c52e;
   background-size: auto;
   background-image: none;
