--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ a {
 .modal-feedback h2,
 .popular b {
   font-size: 47px;
-  font-family: "Gilroy", "Open Sans", sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   line-height: 48px;
   font-weight: 800;
   letter-spacing: 4px;
@@ -310,7 +310,7 @@ a {
 }
 
 .slide-number {
-  font-family: "Gilroy", "Open Sans", sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   font-size: 173.2px;
   font-weight: 800;
   color: #ffffff;
@@ -429,7 +429,7 @@ a {
 
 .partners-item {
   font-size: 16px;
-  font-family: "Gilroy", "Open Sans", sans-serif;
+  font-family: "Gilroy", "Arial", sans-serif;
   font-weight: 800;
   line-height: 40px;
   color: #000000;
@@ -480,7 +480,7 @@ a {
 
 .user-navigation-footer a {
   font-size: 15px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 300;
   color: #ffffff;
   line-height: 30px;
