--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,16 @@ body {
   /* background-color: brown; */
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 a {
   text-decoration: none;
 }
 
-.main-navigation {
+.main-header {
   background-color: #f7e296;
 }
 
@@ -91,6 +96,8 @@ a {
 .brands-list,
 .slider-list-popular {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .main-footer p {
@@ -101,7 +108,7 @@ a {
   font-size: 15px;
   color: #000000;
   line-height: 30px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .site-navigation a:hover,
@@ -154,9 +161,9 @@ a {
 .search-form {
   /* border-color: red;
   border-style: solid; */
-  display: inline-block;
-  padding-left: 50px;
-  margin-right: 50px;
+  /* display: block; */
+  padding-left: 40px;
+  margin-right: 40px;
   width: 500px;
 
   background-image: url("../img/search-icon.svg");
@@ -165,15 +172,15 @@ a {
 }
 
 .account {
-  flex-grow: 2;
+  /* flex-grow: 1.5; */
 }
 
 .compare {
-  margin-right: 20px;
+  /* margin-right: 20px; */
 }
 
 .cart {
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
 
 .account-icon::before{
@@ -181,12 +188,22 @@ a {
   width: 13px;
   height: 12px;
   margin-right: 12px;
-  margin-left: 12px;
+  /* margin-left: 12px; */
 
   background-image: url("../img/account-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
   display: inline-block;
+}
+
+.account-icon-exit {
+  opacity: 0.3;
+}
+
+.account-icon-exit::before {
+  background-image: url("");
+  width: 0;
+  height: 0;
 }
 
 .account-icon-footer::before {
@@ -254,6 +271,10 @@ a {
   display: inline-block;
 }
 
+.catalog {
+  padding-right: 40px;
+}
+
 .catalog::after {
   content: "";
   width: 16px;
@@ -281,6 +302,8 @@ a {
 }
 
 .sub-menu a {
+  padding: 0;
+  margin: 0;
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 15px;
   line-height: 30px;
@@ -288,9 +311,6 @@ a {
   color: #464646;
   text-transform: none;
 }
-
-/* .slide-switches {
-} */
 
 .container h2,
 .info h2,
@@ -567,10 +587,14 @@ a {
   background-repeat: no-repeat;
   background-position: center;
   outline: none;
+
+  border: 0;
+  background-color: transparent;
 }
 
 .modal-feedback .button,
-.filters .button {
+.filter .button,
+ {
   width: 260px;
 
   padding-top: 5px;
@@ -631,15 +655,22 @@ a {
 .container {
   width: 1200px;
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
+
+  border: 4px dashed red;
 }
 
 .main-navigation {
   display: flex;
   flex-direction: column;
 
-  padding-left: 60px;
-  padding-right: 60px;
+  /* padding-left: 60px;
+  padding-right: 60px; */
+  margin-left: 60px;
+  margin-right: 60px;
+  min-width: 1040px;
+
+  border: 4px green dashed;
 }
 
 .site-navigation {
@@ -653,13 +684,27 @@ a {
 
 .site-navigation-catalog {
   width: 500px;
+  margin-right: 40px;
   /* margin-right: 40px; */
   /* flex-grow: 1; */
+}
+
+.site-navigation-container {
+  display: flex;
+  width: 500px;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.site-navigation-warranty {
+  /* flex-grow: 0.25; */
+  width: 160px;
 }
 
 .user-interface {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 
   margin-bottom: 25px;
 }
@@ -667,11 +712,13 @@ a {
 .user-navigation {
   padding: 0;
   margin: 0;
-  flex-basis: 500px;
+  /* flex-basis: 500px; */
+  min-width: 500px;
 
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
+  flex-wrap: nowrap;
 }
 
 .categories-list {
@@ -731,4 +778,121 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.main-wrapper {
+  padding-left: 60px;
+  padding-right: 60px;
+  min-width: 1160px;
+
+  display: flex;
+  flex-direction: column;
+  border: 3px blue dashed;
+}
+
+.main-wrapper::before {
+  content: "MAIN WRAPPER";
+  color: white;
+  top: 0;
+  left: 0;
+  letter-spacing: 0.4px;
+
+  width: 250px;
+  height: 30px;
+  background-color: blue;
+}
+
+.section-wrapper-catalog {
+  display: flex;
+  flex-direction: row;
+  min-width: 1160px;
+  /* margin- */
+  justify-content: space-between;
+}
+
+.catalog-section {
+  padding: 0;
+  margin: 0;
+  max-width: 835px;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.catalog-list {
+  padding: 0;
+  margin 0;
+  margin-left: 70px;
+  /* padding-left: 20px;
+  padding-right: 20px; */
+  list-style: none;
+
+  display: flex;
+  flex-direction: row;
+  width: 1000px;
+  flex-wrap: wrap;
+}
+
+.catalog-list-card {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.catalog-list-card li {
+  padding: 0;
+  margin: 0;
+}
+
+.breadcrumbs-list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 50px;
+  list-style: none;
+}
+
+.breadcrumbs-item {
+  position: relative;
+  padding-right: 25px;
+  margin-right: 5px;
+}
+
+.breadcrumbs-item::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+
+  position: absolute;
+  top: 6px;
+  right: 0;
+
+  background-image: url("../img/breadscrumbs-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.breadcrumbs-item::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+
+  position: absolute;
+  top: 6px;
+  right: 0;
+
+  background-image: url("../img/breadscrumbs-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.breadcrumbs-current::after {
+  background-image: url("");
+}
+
+.filter: {
+  min-width: 270px;
+  background-color: red;
 }
