--- a/css/style.css
+++ b/css/style.css
@@ -331,10 +331,6 @@ a {
   padding-right: 40px;
 }
 
-.catalog:hover .sub-menu {
-  display: block;
-}
-
 .catalog::after {
   content: "";
   width: 16px;
@@ -360,42 +356,42 @@ a {
 }
 
 .site-navigation-footer a {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+
+  text-transform: uppercase;
+  line-height: 24px;
+  font-size: 18px;
+  letter-spacing: 3.5px;
   color: #ffffff;
 }
 
+.site-navigation-footer a:hover {
+  opacity: 0.6;
+}
+
+.site-navigation-footer a:focus,
+.site-navigation-footer a:active {
+  opacity: 0.3;
+}
 
 /* -----------------------SUB-MENU------------------------ */
-
-
-.sub-menu-wrapper {
-  position: relative;
-  min-height: 125px;
-  z-index: 99;
-
-  background-color: #f7e296;
-}
 
 .sub-menu {
   margin: 0;
   padding: 0;
-  margin-left: 60px;
-  margin-right: 40px;
+  margin-top: 35px;
+  padding-bottom: 36px;
+  padding-left: 60px;
+  min-height: 125px;
+  width: 1160px;
 
   position: absolute;
   z-index: 100;
 
-  display: -webkit-box;
-
-  display: -ms-flexbox;
-
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  display: none;
+  flex-direction: row;
+  justify-content: flex-start;
 
   background-color: #f7e296;
 }
@@ -730,21 +726,18 @@ a {
 .site-navigation {
   padding: 0;
   margin: 0;
+  min-height: 191px;
 
-  display: -webkit-box;
-
-  display: -ms-flexbox;
+  position: relative;
 
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+
+.site-navigation-small {
+  min-height: 53px;
 }
 
 .site-navigation-catalog {
@@ -752,6 +745,11 @@ a {
   margin-left: 60px;
   margin-right: 20px;
   margin-bottom: 35px;
+}
+
+.site-navigation-catalog:hover ~ .sub-menu,
+.site-navigation-catalog:active ~ .sub-menu {
+  display: flex;
 }
 
 .page-catalog {
@@ -788,7 +786,7 @@ a {
   margin-right: 12px;
 
   position: absolute;
-  top: 210px;
+  top: 105px;
 
   background-image: url("../img/bar-white.png");
   background-repeat: no-repeat;
@@ -871,7 +869,7 @@ a {
   margin: 0;
   list-style: none;
   min-width: 1160px;
-  margin-bottom: 22px;
+  margin-bottom: 18px;
 
   display: -webkit-box;
 
@@ -959,7 +957,7 @@ a {
   min-width: 505px;
   letter-spacing: 0px;
   position: absolute;
-  top: -30px;
+  top: -33px;
   line-height: 56px;
   letter-spacing: 0.6px;
 }
@@ -1285,7 +1283,7 @@ a {
 }
 
 .brands {
-  margin-bottom: 84px;
+  margin-bottom: 89px;
 }
 
 .brands-list {
@@ -1308,7 +1306,12 @@ a {
 }
 
 .brands-item {
-  margin: 0 19px;
+  margin-left: 30px;
+  margin-left: 35px;
+}
+
+.brands-item:nth-child(1) {
+  margin-left: 8px;
 }
 
 .brands-item a {
@@ -1328,7 +1331,6 @@ a {
   margin: 0;
   min-width: 1160px;
   margin-bottom: 35px;
-  padding-right: 20px;
 
   display: -webkit-box;
 
@@ -1360,7 +1362,7 @@ a {
 
 .contacts {
   width: 560px;
-  margin-left: 20px;
+  margin-left: 70px;
 
   display: -webkit-box;
 
@@ -1394,11 +1396,12 @@ a {
   margin: 0;
   margin-top: 35px;
   margin-bottom: 15px;
-  padding-left: 35px;
+  padding-left: 20px;
   list-style: circle;
 }
 
 .index-map {
+  min-width: 560px;
   padding-top: 10px;
   margin-bottom: 20px;
 }
@@ -1487,22 +1490,15 @@ a {
 }
 
 .site-navigation-footer {
+  margin: 0;
+  padding: 0;
   margin-top: 132px;
 
-  display: -webkit-box;
-
-  display: -ms-flexbox;
-
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  flex-wrap: nowrap;
 }
 
 .site-navigation-footer li {
@@ -1600,19 +1596,10 @@ a {
 
   position: relative;
 
-  display: -webkit-box;
-
-  display: -ms-flexbox;
-
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-
-  -webkit-box-shadow: 0 0 25px 1px black;
+  /* display: flex; */
+  display: none;
+  flex-direction: row;
+  flex-wrap: nowrap;
 
           box-shadow: 0 0 25px 1px black;
 }
@@ -1709,7 +1696,8 @@ feedback-name:invalid,
 
   display: -ms-flexbox;
 
-  display: flex;
+  /* display: flex; */
+  display: none;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -1768,16 +1756,17 @@ feedback-name:invalid,
 }
 
 .breadcrumbs-item a {
-  color: #e7e7e7;
+  color: #000000;
+  opacity: 0.3;
 }
 
 .breadcrumbs-item a:hover {
-  color: #b1b1b1;
+  opacity: 0.6;
 }
 
 .breadcrumbs-item a:active,
 .breadcrumbs-item a:focus {
-  color: #eeeeee;
+  opacity: 0.1;
 }
 
 .breadcrumbs-list {
@@ -2273,7 +2262,7 @@ feedback-name:invalid,
   margin: 0;
   width: 830px;
   padding-top: 70px;
-  padding-left: 30px;
+  padding-left: 70px;
 
   display: -webkit-box;
 
@@ -2311,6 +2300,10 @@ feedback-name:invalid,
       flex-wrap: wrap;
 }
 
+.catalog-list ul:nth-child(2n) {
+  margin-left: 39px;
+}
+
 .catalog-list-card {
   padding: 0;
   margin: 0;
@@ -2329,7 +2322,6 @@ feedback-name:invalid,
   margin: 0;
   padding: 0;
   margin-bottom: 20px;
-  margin-left: 40px;
 }
 
 .card-footer {
@@ -2369,7 +2361,7 @@ feedback-name:invalid,
 .catalog-pagination {
   min-width: 760px;
   min-height: 70px;
-  margin-left: 40px;
+  /* margin-left: 40px; */
   margin-bottom: 77px;
 
   display: -webkit-box;
@@ -2535,7 +2527,7 @@ feedback-name:invalid,
 
 .new::after {
   content: "";
-  margin: 20px;
+  margin: 25px;
   width: 62px;
   height: 62px;
 
