--- a/css/style.css
+++ b/css/style.css
@@ -454,11 +454,6 @@ a {
   color: #000000;
 }
 
-.category:active,
-.category:focus {
-  color: rgba(0, 0, 0, 0.3);
-}
-
 .category::before {
   content: "";
   position: absolute;
@@ -925,10 +920,6 @@ a {
 
 .popular-slide {
   display: none;
-}
-
-.slide-3 p {
-  max-width: 490px;
 }
 
 #product-1:checked ~ .container #slide-1,
@@ -1937,7 +1928,7 @@ feedback-name:invalid,
 .sort-price,
 .sort-type,
 .sort-popularity {
-  color: rgba(0, 0, 0, 0.3);
+  color: rgba(0 0 0 0.3);
 }
 
 .sort-price {
@@ -1956,7 +1947,7 @@ feedback-name:invalid,
 .sort-price:hover,
 .sort-type:hover,
 .sort-popularity:hover {
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(0 0 0 0.6);
 }
 
 .sort-price:active,
@@ -1968,7 +1959,7 @@ feedback-name:invalid,
 .sort-price:visited,
 .sort-type:visited,
 .sort-popularity:visited {
-  color: rgba(0, 0, 0, 1);
+  color: rgba(0 0 0 1);
 }
 
 .arrows {
@@ -2582,4 +2573,3 @@ feedback-name:invalid,
 
 .hidden {
   display: none;
-}
