--- a/css/style.css
+++ b/css/style.css
@@ -454,6 +454,10 @@ a {
   color: #000000;
 }
 
+.category:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
 .category::before {
   content: "";
   position: absolute;
